[metadata]
name = PALD
version = 0.1.1
author = Ryan DeWolfe
author_email = ryandewolfe33@gmail.com
maintainer = Ryan DeWolfe
maintainer_email = ryandewolfe33@gmail.com
description = Partitioned Local Depth Clustering
long_description = file: README.md
keywords = embedding vector, cluster, clustering, comparator
url = https://github.com/ryandewolfe33/PALD
license = BSD License
license_files = LICENSE
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.12
    Development Status :: 4 - Beta
    Operating System :: OS Independent

[options]
zip_safe = False
packages = pald
python_requires = >=3.12
install_requires =
    numpy>=1.21, <2.0.0
    scikit-learn>=1.5
    scikit-network>=0.32
    numba>=0.60
    pynndescent>=0.5
    scipy>=1.14
